--- a/server/index.html
+++ b/server/index.html
@@ -7,9 +7,9 @@ title: Server
 		<p class="text-center">Nothing published yet!</p>
 	{% elsif site.paginate %}
 		{% for post in paginator.posts %}
-			{% if post.category == 'blog' %}
+			{% if post.category == 'server' %}
 				{% if post.hidden != true %}
-					{% include blog-post.html %}
+					{% include server-post.html %}
 				{% endif %}
 			{% endif %}
 		{% endfor %}
@@ -17,9 +17,9 @@ title: Server
 		{% include pagination.html%}
 	{% else %}
 		{% for post in site.posts %}
-			{% if post.category == 'blog' %}
+			{% if post.category == 'server' %}
 				{% if post.hidden != true %}
-					{% include blog-post.html %}
+					{% include server-post.html %}
 				{% endif %}
 			{% endif %}
 		{% endfor %}
